# VMHandy

./: .gitignore  MANIFEST.in  README.md  VMHandy.wpr  VMHandy.wpu  file_ops.py  main.py  pyproject.toml  ui.py
.github/workflows/: ci.yml  release.yml
assets/: vmhandy.icns
commercial/: VMHandy-commercial-brief.md  editing-script.md  script.md  storyboard.md  voiceover.txt
