[project]
name = "vmhandy"
version = "0.1.0"
description = "Desktop utility for moving Parallels VMs between USB and internal storage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.8,<7",
]

[project.scripts]
vmhandy = "main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
